# dacon-236590

./: .gitignore  PROJECT_SUMMARY.md  baseline_models.py  eda.py  final_submission.csv  main.ipynb  main.py  preprocessing.py  preprocessor_aggressive.pkl  preprocessor_basic.pkl  pyproject.toml  quick_baseline.py  simple_submission.py  test_libraries.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
answers/: tasks_0_90_achievement.md
config/: experiment_config.yaml
docs/: DIRECTORY_STRUCTURE.md  notebook_improvement_plan.md
docs/analysis_reports/: chapter3_phase1_task_T007_results.md  chapter_00_current_codebase_analysis.md  master_plan_0_90_achievement.md  tasks_0_90_achievement.md
experiments/wandb/: latest-run
models/: preprocessor_feature_selected.pkl
notebooks/: 01_main_analysis.ipynb  02_hyperparameter_tuning.ipynb  03_optuna_optimization.ipynb  04_feature_engineering.ipynb  04_feature_engineering_v2.ipynb  05_safe_improvement.ipynb  06_model_comparison.ipynb  07_hyperparameter_optimization.ipynb  08_feature_engineering.ipynb  09_final_ensemble.ipynb  README.md
outputs/: ensemble_results.csv  feature_engineering_results.csv  optimization_results.csv
outputs/evaluation/: evaluation_summary.json  model_comparison.csv
outputs/predictions/: model_summary.csv  submission_DecisionTreeClassifier.csv  submission_Ensemble_HardVoting.csv  submission_Ensemble_SoftVoting.csv  submission_LogisticRegression.csv  submission_RandomForestClassifier.csv  submission_SVC.csv
scripts/: remove_svc.py
(+233 files in other folders)
